Bug 253879 - window to add search engine is outside the screen
Summary: window to add search engine is outside the screen
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: searchbarplugin (other bugs)
Version First Reported In: 4.5.1
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Arend van Beelen jr.
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-11 21:43 UTC by Xavier Brochard
Modified: 2011-05-31 21:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Add search engine window out of the screen (7.76 KB, image/jpeg)
2010-10-11 21:43 UTC, Xavier Brochard
Details
patch to make the add search engine window right aligned to the search bar (741 bytes, patch)
2011-05-30 20:53 UTC, Burkhard Lück
Details
add search engine window placement with + without throbber (29.80 KB, image/png)
2011-05-30 20:54 UTC, Burkhard Lück
Details
different layout, adapted (20.03 KB, image/png)
2011-05-30 23:02 UTC, Xavier Brochard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xavier Brochard 2010-10-11 21:43:19 UTC
Created attachment 52424 [details]
Add search engine window out of the screen

Version:           4.5.1 (using KDE 4.5.1) 
OS:                Linux

I wanted to add a search engine to konqueror, through the search engine home page. Konqueror's window was maximised. 
Going to the searchbarplugin, I clicked on the search engine list, then on the "Add [search engine name]" entry.
I was unable to add the search engine because the add window was outside the screen (see screenchots).

Reproducible: Always

Steps to Reproduce:
Put the konqueror window on the right of the screen, or just maximise the window. Go to a search engine home page, not yet listed in konqueror (one of many bugzilla should be a good candidate). Then try to add it with the searchbarplugin.

Actual Results:  
konqueror open a new window called "define URI shortcut". Part of that window is outside konqueror's main window. As Konqueror is maximised, the window is outside the screen. You can't add a search engine (unless you resize konqueror's main window).

Expected Results:  
"define URI shortcut" inside konqueror's main window

OS: Linux (x86_64) release 2.6.32-5-amd64
Compiler: cc
KDE 4.5.1 packages from Debian temporary repository (because testing is currently frozen))
QT 4.7-rc1 from Debian experimental
Comment 1 Burkhard Lück 2011-05-10 10:52:19 UTC
Using kde 4.6.2 (kubuntu 10.10) and master/branch 4.6 compiled from sources the dialog "Set URI Shortcuts" is properly displayed inside konqueror's maximized main window.
Comment 2 Xavier Brochard 2011-05-10 17:09:24 UTC
Still present in 4.6.1 using Debian semi official packages from qt-kde repository.
Comment 3 disabled account 2011-05-27 14:09:11 UTC
Works for me with KDE 4.6.2, could it be a screen resolution thing? Mine is 1366x768.
Closing it until someone with KDE >4.6.2 can confirm this.
Comment 4 Xavier Brochard 2011-05-30 17:03:45 UTC
Please reopen. The bug is still present with kde 4.6.3 from Debian official package (unstable repository).
This bug affect only non english languages versions. From various testing, it looks like the "Set URI Shortcuts" window is allways displayed with the left border aligned to the left of the search box. Because of this the window has a small width. Problem is with verbose translations that can't fit in that window.

It is not a resolution problem, it's only that the "non english" window exceed konqueror window.

I would like to add that it should never be a screen resolution problem. The dialog box should adapt itself to various resolutions, as long as it is possible, which is the case here.
Comment 5 Burkhard Lück 2011-05-30 19:55:17 UTC
It is reproducible with 4.6.3/master compiled from sources and any other system, but to see the bug you have to use locale fr and remove the Throbber (fr=Vibreur) from the Location toolbar.
Seems I need to add locale fr to my testcases, I never expected a longer translation than in locale de (notorious for that problem) or x-test.
Sorry Xavier, I overlooked the length of the fr string in your screenshot.
Comment 6 Xavier Brochard 2011-05-30 20:23:40 UTC
I guess that the problem happens with other languages too! :-)

You are right for the Throbber. I removed it for so a long time, that I totally forgot it, sorry.

BTW, I noticed that a lot of windows in kde get their size from the translated string. This is a bad practice IMHO, as some translators tend to be very verbose. Like for example:
"Bookmark tabs as folder"
which became
"Mettre les onglets dans un dossier de signets"
Comment 7 Burkhard Lück 2011-05-30 20:50:31 UTC
(In reply to comment #6)
> I guess that the problem happens with other languages too! :-)
>
Sure
 
> BTW, I noticed that a lot of windows in kde get their size from the translated
> string. This is a bad practice IMHO, as some translators tend to be very
> verbose. 

I (beeing a translator in the german team) completely disagree!

Fixed layout like in this case is *evil* and a bug.
Comment 8 Burkhard Lück 2011-05-30 20:53:13 UTC
Created attachment 60483 [details]
patch to make the add search engine window right aligned to the search bar
Comment 9 Burkhard Lück 2011-05-30 20:54:34 UTC
Created attachment 60484 [details]
add search engine window placement with + without throbber
Comment 10 Xavier Brochard 2011-05-30 22:59:23 UTC
> > BTW, I noticed that a lot of windows in kde get their size from the
> > translated string. This is a bad practice IMHO, as some translators tend
> > to be very verbose.
> 
> I (beeing a translator in the german team) completely disagree!
> 
> Fixed layout like in this case is *evil* and a bug.

I should have been more precise. Obviously, layouts should adapt themselves to strings size, but this is different to layouts being wider:
ideally, layouts should be limited by screen borders, then use the height too (and put the string on 2 lines if needed), and last rearranged themselves. Something like in attachment, below.
Comment 11 Xavier Brochard 2011-05-30 23:02:38 UTC
Created attachment 60490 [details]
different layout, adapted
Comment 12 Burkhard Lück 2011-05-31 21:42:07 UTC
Git commit 658bff15e373602425fa5bd0909e6e837fa2bffc by Burkhard Lück.
Committed on 31/05/2011 at 21:40.
Pushed by lueck into branch 'KDE/4.6'.

make the add search engine window right aligned to the search bar

using locales with long translations of the window strings like eg fr part of the window
to add the search engine is outside the screen, because the window is left aligned to the
left side of the search bar. Right aligned to the right side of the search bar ensure
that even with translated strings longer than the search bar the window is always visible
in konquerors main window.
REVIEW:101475
BUG:253879

M  +1    -1    konq-plugins/searchbar/searchbar.cpp     

http://commits.kde.org/kde-baseapps/658bff15e373602425fa5bd0909e6e837fa2bffc
Comment 13 Burkhard Lück 2011-05-31 21:42:10 UTC
Git commit 7fd2209d8c110c9fb08d383a12cbf957a85daf53 by Burkhard Lück.
Committed on 31/05/2011 at 21:40.
Pushed by lueck into branch 'master'.

make the add search engine window right aligned to the search bar

using locales with long translations of the window strings like eg fr part of the window
to add the search engine is outside the screen, because the window is left aligned to the
left side of the search bar. Right aligned to the right side of the search bar ensure
that even with translated strings longer than the search bar the window is always visible
in konquerors main window.
REVIEW:101475
CCBUG:253879
(cherry picked from commit 3a0cfafc3bb7695a8ce2ae3f2f3b85e80f705180)

M  +1    -1    konq-plugins/searchbar/searchbar.cpp     

http://commits.kde.org/kde-baseapps/7fd2209d8c110c9fb08d383a12cbf957a85daf53