make the add search engine window right aligned to the search bar

using locales with long translations of the window strings like eg fr part of the window
to add the search engine is outside the screen, because the window is left aligned to the
left side of the search bar. Right aligned to the right side of the search bar ensure
that even with translated strings longer than the search bar the window is always visible
in konquerors main window.
REVIEW:101475
BUG:253879